syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.da.rpc";
option java_outer_classname = "RaftProto";

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteReply) {}

  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesReply) {}
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteReply {
  int32 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  int32 leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  //TODO entries[]
  int32 leader_commit = 5;
}

message AppendEntriesReply {
  int32 term = 1;
  bool success = 2;
}
